fixing spacing + transition in article-contact.scss

--- a/src/styles/contact/article-contact.scss
+++ b/src/styles/contact/article-contact.scss
@@ -1,5 +1,5 @@
 .article-contact {
-  
+
   .section {
     padding: 20px 60px;
     top: 80px;
@@ -28,6 +28,7 @@
       text-align: center;
       max-width: 345px;
     }
+
     @include media(sm) {
       align-items: center;
       margin: 0 auto 20px auto;
@@ -77,10 +78,14 @@
     opacity: 0.75;
     padding: 3px 6px;
     text-decoration: none;
-    transition: 0.125s linear opacity;
+    transition: 0.125s linear color;
 
     &:hover {
       color: $gray;
+    }
+    
+    &:active {
+      color: $purple-dark;
     }
 
     &:hover .icons,
